tests/v0-fail/choice.out
Running <root>/choice.cli ...

printf "hello\n"
---
hello
---
ERROR: pattern choice at line <root>/choice.cli:4 does not match output line "hello"
matching Sequence([Choice([Literal(foo), Literal(bar), Literal(baz)]), End])
  matching Choice([Literal(foo), Literal(bar), Literal(baz)])
    matching Literal(foo)
    literal FAILED match: "hello" == "foo"
    matching Literal(bar)
    literal FAILED match: "hello" == "bar"
    matching Literal(baz)
    literal FAILED match: "hello" == "baz"

❌ FAIL

<root>/choice.cli FAILED
Error: pattern choice at line <root>/choice.cli:4 does not match output line "hello"

